tests/ui/unsized/param-mentioned-by-different-field.stderr
error[E0308]: mismatched types
  --> $DIR/param-mentioned-by-different-field.rs:8:25
   |
LL |     let y: &Foo<[u8]> = &x;
   |            ----------   ^^ expected `&Foo<[u8]>`, found `&Foo<[u8; 1]>`
   |            |
   |            expected due to this
   |
   = note: expected reference `&Foo<[u8]>`
              found reference `&Foo<[u8; 1]>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
